--- a/FPSgame/Assembly-CSharp.csproj
+++ b/FPSgame/Assembly-CSharp.csproj
@@ -57,8 +57,9 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Hand.cs" />
     <Compile Include="Assets\Scripts\HandController.cs" />
-    <Compile Include="Assets\Scripts\PlayerControler.cs" />
     <Compile Include="Assets\Scripts\Title.cs" />
+    <Compile Include="Assets\Scripts\PlayerControler.cs" />
+    <Compile Include="Assets\Scripts\Gun.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Water Shader\Water_Shader.shader" />
